# Spaceport

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yaml
docs/: Install.md  Model.md  Modules.md  RestAPI.md  Tests.md
etc/spaceport/: spaceport.json
src/: CMakeLists.txt
src/spaceport/: Main.cpp
src/spaceport/core/: Spaceport.cpp  Spaceport.hpp
src/spaceport/core/server/: Middlewares.cpp  Middlewares.hpp
src/spaceport/data/: Config.cpp  Config.hpp
src/spaceport/defs/: Definitions.hpp
src/spaceport/frontend/: Dashboard.cpp  Dashboard.hpp  Easter.cpp  Easter.hpp
src/spaceport/modules/: DataStorageModule.cpp  DataStorageModule.hpp  Module.cpp  Module.hpp
tests/: CMakeLists.txt
tests/src/: ServerTests.cpp  TestRunner.cpp
tests/src/util/: PortMock.cpp  PortMock.hpp
www/: base.html  index.html  webbase.html
www/assets/: base.js  style.css
